<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:padding="10px">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextInfoField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:focusable="false"
            android:gravity="right"
            android:textSize="@dimen/workField_text_size"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextWorkField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:background="#ffffff"
            android:inputType="number"
            android:focusable="false"
            android:gravity="right"
            android:textSize="@dimen/workField_text_size"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonPercent" />

        <Button
            android:id="@+id/buttonCe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonCE" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonC" />

        <Button
            android:id="@+id/buttonBackspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonBackspace" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button3" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonDiv" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button6" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonMultiplication" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button9" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonMinus" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button0" />

        <Button
            android:id="@+id/buttonPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonPt" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonPlus" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonResult" />

    </TableRow>

</TableLayout>