<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@drawable/background"
    android:padding="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="left">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:buttonTint="@color/colorPrimary"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="20"
            android:text="@string/switchDarkThemeText"
            android:textColor="@color/white"
            android:textOff="OFF"
            android:textOn="ON"
            android:textSize="@dimen/switchDarkTheme_text_size"
            app:showText="true" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="left">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/buttonMarginLeft"
        android:text="@string/buttonSettingsSave"
        android:textSize="@dimen/key_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/buttonMarginLeft"
        android:text="@string/buttonSettingsCancel"
        android:textSize="@dimen/key_text_size" />
    </TableRow>

</TableLayout>